Work in progress - migration to DtUid, almost finished with texts...
