# generator/src/main/java/com/provys/provysobject/generator/EntityGenerator.java
@@ -28,6 +28,17 @@ public interface EntityGenerator {
     String generateInterface(String entityNm, @Nullable String friendEntities);
 
     /**
+     * Generate class with meta-information
+     *
+     * @param entityNm is internal name of entity class should be based on
+     * @param friendEntities is comma separated list of internal names of entities under the same repository; generator
+     *                      generates getters returning object instead of just Id for foreign keys of these types
+     * @return source code for given class
+     */
+    @Nonnull
+    String generateMeta(String entityNm, @Nullable String friendEntities);
+
+    /**
      * Generate generated proxy ancestor, implementing interface of given object in scope defined by generated interface
      *
      * @param entityNm is internal name of entity class should be based on
@@ -50,6 +61,17 @@ public interface EntityGenerator {
     String generateProxy(String entityNm, @Nullable String friendEntities);
 
     /**
+     * Generate Jackson converter for proxy serialization via value class
+     *
+     * @param entityNm is internal name of entity class should be based on
+     * @param friendEntities is comma separated list of internal names of entities under the same repository; generator
+     *                      generates getters returning object instead of just Id for foreign keys of these types
+     * @return source code for given class
+     */
+    @Nonnull
+    String generateProxySerializationConverter(String entityNm, @Nullable String friendEntities);
+
+    /**
      * Generate value class - whole value class is generated, potential logic is implemented in proxy
      *
      * @param entityNm is internal name of entity class should be based on
@@ -70,6 +92,17 @@ public interface EntityGenerator {
      */
     @Nonnull
     String generateValueBuilder(String entityNm, @Nullable String friendEntities);
+
+    /**
+     * Generate jackson serializer for value builder class
+     *
+     * @param entityNm is internal name of entity class should be based on
+     * @param friendEntities is comma separated list of internal names of entities under the same repository; generator
+     *                      generates getters returning object instead of just Id for foreign keys of these types
+     * @return source code for given class
+     */
+    @Nonnull
+    String generateValueBuilderSerializer(String entityNm, @Nullable String friendEntities);
 
     /**
      * Generate loader interface - generated template for loader interface, that is later manually modified
