# restapi/src/main/webapp/openapi/openapi.json
@@ -76,11 +76,11 @@
         }
       }
     },
-    "/entity/{entityNm}/genproxy" : {
+    "/entity/{entityNm}/valuebuilderserializer" : {
       "get" : {
-        "summary" : "Generate GenProxy",
-        "description" : "Generate generated proxy ancestor, implementing interface of given object in scope defined by generated interface",
-        "operationId" : "getGenProxy",
+        "summary" : "Generate Value Builder Serializer",
+        "description" : "Generate Jackson serializer for value builder class - ensures that serialization contains fields with upd flag set",
+        "operationId" : "getValueBuilderSerializer",
         "parameters" : [ {
           "name" : "entityNm",
           "in" : "path",
@@ -109,143 +109,11 @@
         }
       }
     },
-    "/entity/{entityNm}/interface" : {
+    "/entity/{entityNm}/proxyserializationconverter" : {
       "get" : {
-        "summary" : "Generate Interface",
-        "description" : "Generate interface, representing instance of object of given type",
-        "operationId" : "getInterface",
-        "parameters" : [ {
-          "name" : "entityNm",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "friendEntities",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "Class source",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/entity/{entityNm}/valuebuilder" : {
-      "get" : {
-        "summary" : "Generate Value Builder",
-        "description" : "Generate value builder class - object allowing creation or modification of object value",
-        "operationId" : "getValueBuilder",
-        "parameters" : [ {
-          "name" : "entityNm",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "friendEntities",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "Class source",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/entity/{entityNm}/geninterface" : {
-      "get" : {
-        "summary" : "Generate GenInterface",
-        "description" : "Generate generated ancestor of interface for accessing objects of given type, containing attribute getters",
-        "operationId" : "getGenInterface",
-        "parameters" : [ {
-          "name" : "entityNm",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "friendEntities",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "Class source",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/entity/{entityNm}/loader" : {
-      "get" : {
-        "summary" : "Generate Loader Interface",
-        "description" : "Generate loader interface - interface defining requirements for loader for given entity. Only used to initialize file if one doesn't exist, is not refreshed later",
-        "operationId" : "getLoaderInterface",
-        "parameters" : [ {
-          "name" : "entityNm",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "friendEntities",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "Class source",
-            "content" : {
-              "text/plain" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/entity/{entityNm}/loaderbase" : {
-      "get" : {
-        "summary" : "Generate Loader Base class",
-        "description" : "Generate loader base class - common ancestor for loaders for given entity.",
-        "operationId" : "getLoaderBase",
+        "summary" : "Generate Proxy Serialization Converter",
+        "description" : "Generate Jackson converter used for proxy serialization via value class",
+        "operationId" : "getProxySerializationConverter",
         "parameters" : [ {
           "name" : "entityNm",
           "in" : "path",
@@ -307,6 +175,39 @@
         }
       }
     },
+    "/entity/{entityNm}/loader" : {
+      "get" : {
+        "summary" : "Generate Loader Interface",
+        "description" : "Generate loader interface - interface defining requirements for loader for given entity. Only used to initialize file if one doesn't exist, is not refreshed later",
+        "operationId" : "getLoaderInterface",
+        "parameters" : [ {
+          "name" : "entityNm",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "friendEntities",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "Class source",
+            "content" : {
+              "text/plain" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/entity/{entityNm}/dbloadrunner" : {
       "get" : {
         "summary" : "Generate DbLoadRunner class",
@@ -340,11 +241,11 @@
         }
       }
     },
-    "/entity/{entityNm}/jsonbvalueadapter" : {
+    "/entity/{entityNm}/genproxy" : {
       "get" : {
-        "summary" : "Generate JSON-B Value Adapter",
-        "description" : "Generate JSON-B value adapter - translates value to value builder for serialisation",
-        "operationId" : "getJsonbValueAdapter",
+        "summary" : "Generate GenProxy",
+        "description" : "Generate generated proxy ancestor, implementing interface of given object in scope defined by generated interface",
+        "operationId" : "getGenProxy",
         "parameters" : [ {
           "name" : "entityNm",
           "in" : "path",
@@ -373,11 +274,143 @@
         }
       }
     },
-    "/entity/{entityNm}/jsonbproxyadapter" : {
+    "/entity/{entityNm}/geninterface" : {
       "get" : {
-        "summary" : "Generate JSON-B Proxy Adapter",
-        "description" : "Generate JSON-B proxy adapter - translates proxy to value object for serialisation",
-        "operationId" : "getJsonbProxyAdapter",
+        "summary" : "Generate GenInterface",
+        "description" : "Generate generated ancestor of interface for accessing objects of given type, containing attribute getters",
+        "operationId" : "getGenInterface",
+        "parameters" : [ {
+          "name" : "entityNm",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "friendEntities",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "Class source",
+            "content" : {
+              "text/plain" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/entity/{entityNm}/interface" : {
+      "get" : {
+        "summary" : "Generate Interface",
+        "description" : "Generate interface, representing instance of object of given type",
+        "operationId" : "getInterface",
+        "parameters" : [ {
+          "name" : "entityNm",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "friendEntities",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "Class source",
+            "content" : {
+              "text/plain" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/entity/{entityNm}/meta" : {
+      "get" : {
+        "summary" : "Generate Meta class",
+        "description" : "Generate meta class, providing statical meta-information for type",
+        "operationId" : "getMeta",
+        "parameters" : [ {
+          "name" : "entityNm",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "friendEntities",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "Class source",
+            "content" : {
+              "text/plain" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/entity/{entityNm}/valuebuilder" : {
+      "get" : {
+        "summary" : "Generate Value Builder",
+        "description" : "Generate value builder class - object allowing creation or modification of object value",
+        "operationId" : "getValueBuilder",
+        "parameters" : [ {
+          "name" : "entityNm",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "friendEntities",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "Class source",
+            "content" : {
+              "text/plain" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/entity/{entityNm}/loaderbase" : {
+      "get" : {
+        "summary" : "Generate Loader Base class",
+        "description" : "Generate loader base class - common ancestor for loaders for given entity.",
+        "operationId" : "getLoaderBase",
         "parameters" : [ {
           "name" : "entityNm",
           "in" : "path",
